# head_first_to_c-

./: .gitignore  CMakeLists.txt  README.md  exam_3.cpp  lazyEval.cpp  main  main.cpp  result
array/: array  array.cpp  multiDarray  multiDarray.cpp
class/: Implements.h  Interface.h  Sales_data  Sales_data.cpp  Sales_data.h
exam_3/: cstringdemo  cstringdemo.cpp  exam3  exam3.1x  exam3.1x.cpp  exam_3.3  exam_3.3.cpp  iterator  iterator.cpp  vector  vector.cpp
function/: array_params  array_params.cpp  functionc.h  jiechen  jiechen.cpp  params_pass_type  params_pass_type.cpp
io/: consoleio  consoleio.cpp
pipe/: atomic_pipedemo  atomic_pipedemo.cpp  r_pipedemo  r_pipedemo.cpp  read_named_pipe  read_named_pipe.cpp  relative_process_pipedemo  relative_process_pipedemo.cpp  simple_duplex_pipe  simple_duplex_pipe.cpp  w_pipedemo  w_pipedemo.cpp  write_named_pipe  write_named_pipe.cpp
shm/: relativeshm  relativeshm.cpp  shm  shm1  shm2  shm_normal.cpp  shmdemo.cpp
smartpointer/: smart_prt.h  smart_ptrs.cpp  smart_ptrs.h  wildpointer  wildpointer.cpp
template/: template_1  template_1.cpp
